Some minor changes in cfc and about us. Changed Share section in index to refer to hashtag #breathing15

--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@ It will start with an evening event on <span class="live-stress">May 4, 2015</sp
 All sessions will happen on <span class="live-stress">May 5, 2015</span>.
 </p>
 
-<h2>Stay tuned ...</h2>
+<h2>Stay tuned and Share</h2>
 
 <p>
 Please <a href="http://goo.gl/forms/o6oCmuJp18">leave your email</a> or follow
 <a href="https://twitter.com/breathing_code">@breathing_code</a> to get the
-latest conference news.
+latest conference news. Talk about the conference using the tag
+<a href="https://twitter.com/hashtag/breathing15">#breathing15</a>.
 </p>
 
 <p class="twitter-timeline">
@@ -59,4 +60,3 @@ latest conference news.
     data-widget-id="559836566605271040">Tweets by @breathing_code</a>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </p>
-
