--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@ latest conference news. Talk about the conference using the tag
 </p>
 
 <p class="twitter-timeline">
-  <a
-    class="twitter-timeline"
-    href="https://twitter.com/breathing_code"
+  <a 
+    class="twitter-timeline" 
+    data-dnt="true" 
     data-link-color="#63c0f5"
     data-border-color="#b5e853"
     data-theme="dark"
-    data-widget-id="559836566605271040">Tweets by @breathing_code</a>
+    href="https://twitter.com/hashtag/breathing15"
+    data-widget-id="559999051849273344">#breathing15 Tweets</a>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </p>
