--- a/index.html
+++ b/index.html
@@ -7,38 +7,36 @@ layout: default
 <p>
 How do others solve programming problems, what do they think while writing code?
 And how do people change running systems by live coding them? Watch people
-change and evolve code and systems <span class="live-stress">live</span> on
-stage. See for yourself how codes comes alive.
+change and evolve code and systems <em>live</em> on stage. See for yourself how codes
+comes alive.
 </p>
 
 <h2>What’s the conference about?</h2>
 
 <p>
-The term <span class="live-stress">live</span> in connection with <span
-class="live-stress">programming</span> has several meanings. People can <span
-class="live-stress">code live</span> in front of an audience in order to show
-how they tackle problems, use their IDEs or craft solutions. <span
-class="live-stress">Live Coding</span> on the other hand refers to programmable
-systems whose state and behaviour is changed on the fly when certain programs
-are being added, removed or modified. Creating music on-stage with computers is
-one of the typical applications of <span class="live-stress">live</span> coding.
-And finally there are programming environments which give <span
-class="live-stress">instant &amp; live</span> feedback to whatever you are doing
-with your code.
+
+The term <em>live</em> in connection with <em>programming</em> has several meanings. People
+can <em>code live</em> in front of an audience in order to show how they tackle
+problems, use their IDEs or craft solutions. <em>Live Coding</em> on the other hand
+refers to programmable systems whose state and behaviour is changed on the fly
+when certain programs are being added, removed or modified. Creating music
+on-stage with computers is one of the typical applications of <em>live</em> coding. And
+finally there are programming environments which give <em>instant &amp; live</em> feedback
+to whatever you are doing with your code.
+
 </p>
 
 <p>
-This conference wants to bring all aspects of <span class="live-stress">live
-programming</span> together and attract sessions from people of each of those
-fields.
+  This conference wants to bring all aspects of <em>live programming</em> together and
+  attract sessions from people of each of those fields.
 </p>
 
-<h2>When and Where</h2>
+<h2>Time & Place</h2>
 
 <p>
-The conference will take place in <span class="live-stress">Frankfurt, Germany</span>.
-It will start with an evening event on <span class="live-stress">May 4, 2015</span>.
-All sessions will happen on <span class="live-stress">May 5, 2015</span>.
+The conference will take place in <em>Frankfurt, Germany</em>.
+It will start with an evening event on <em>May 4, 2015</em>.
+All sessions will happen on <em>May 5, 2015</em>.
 </p>
 
 <h2>Related events and stuff</h2>
