adding link to pre-register page to nav

--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@ All sessions will happen on <em>May 5, 2015</em>.
 <h2>Stay tuned and Share</h2>
 
 <p>
-Please <a href="http://goo.gl/forms/o6oCmuJp18">leave your email</a> or follow
-<a href="https://twitter.com/breathing_code">@breathing_code</a> to get the
-latest conference news. Talk about the conference using the tag
-<a href="https://twitter.com/hashtag/breathing15">#breathing15</a>.
+
+Follow <a href="https://twitter.com/breathing_code">@breathing_code</a> to get
+the latest conference news. Talk about the conference using the tag <a
+  href="https://twitter.com/hashtag/breathing15">#breathing15</a>.
+
 </p>
 
 <p class="twitter-timeline">
