--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@ live coding means as an interface between humans and computers
 
 <p>
   Follow <a href="https://twitter.com/breathing_code">@breathing_code</a> to get
-  the latest conference news. Talk about the conference using the tag <a
-    href="https://twitter.com/hashtag/breathing15">#breathing15</a>.
+  the latest conference news, talk about the conference using the tag
+  <a href="https://twitter.com/hashtag/breathing15">#breathing15</a>, and
+  <a href="/register.html">pre-register</a> to reserve your place.
 </p>
 
 <p class="twitter-timeline">
