Added links to venues from star page

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ computer programming.
 
 <p>
   The conference will take place in <em>Frankfurt, Germany</em>.
-  It will start with an evening event on <em>May 4, 2015</em>.
-  All sessions will happen on <em>May 5, 2015</em>.
+  It will start with an <a href="/venues.html#preparty">pre-event party</a> on <em>May 4, 2015</em>.
+  All <a href="/venues.html#conference">conference</a> sessions will happen on <em>May 5, 2015</em>.
 </p>
 
 
