Changed registration page to real registration

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ live coding means as an interface between humans and computers
 <p>
   Follow <a href="https://twitter.com/breathing_code">@breathing_code</a> to get
   the latest conference news, talk about the conference using the tag
-  <a href="https://twitter.com/hashtag/breathing15">#breathing15</a>, and
-  <a href="/register.html">pre-register</a> to reserve your place.
+  <a href="https://twitter.com/hashtag/breathing15">#breathing15</a>, or
+  <a href="/register.html">register as participant</a>.
 </p>
 
 <p class="twitter-timeline">
