minor reformatting on start page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@ layout: default
 
 <h2>What is Breathing Code?</h2>
 
-Breathing Code is a conference at the intersection of art, performance and
-computer programming.
+<p>
+  Breathing Code is a conference at the intersection of art, performance and
+  computer programming.
+</p>
 
 <h3>Time & Place</h3>
 
@@ -19,25 +21,25 @@ computer programming.
 <h2>What’s the conference about?</h2>
 
 <p>
-We aim to bring together a diverse set of presenters who all have one thing in
-common: They will change program code live on stage!
+  We aim to bring together a diverse set of presenters who all have one thing in
+  common: They will change program code live on stage!
 </p>
 
 <p>
-Be it that they show their approach on how they solve a particular problem and
-maybe showcase a specific set of tools while doing so.
+  Be it that they show their approach on how they solve a particular problem and
+  maybe showcase a specific set of tools while doing so.
 </p>
 
 <p>
-Or that they use specialize live coding environments, like <a
-  href="http://overtone.github.io/">Overtone</a> to change a system's behaviour
-while it's running, to live code it.
+  Or that they use specialize live coding environments, like <a
+    href="http://overtone.github.io/">Overtone</a> to change a system's
+  behaviour while it's running, to live code it.
 </p>
 
 <p>
-This conference wants to bring all aspects of <em>live programming</em> together and
-attract sessions from people of each of those fields. We want to explore what
-live coding means as an interface between humans and computers
+  This conference showcases diverse aspects of <em>live programming</em>.
+  We want to explore what live coding means as an interface between humans and
+  computers.
 </p>
 
 
