fixing some pronouns

--- a/program.html
+++ b/program.html
@@ -43,17 +43,17 @@ layout: grid
 
 <div class="bio">
   <p>
-    <em>Gregor Gramlich</em> started coding on a Kosmos CP1 when I was nine, quickly followed by the
-    C64 and later Amiga 1000 and 4000.
+    <em>Gregor Gramlich</em> started coding on a Kosmos CP1 when he was nine,
+    quickly followed by the C64 and later Amiga 1000 and 4000.
   </p>
   <p>
-    In university I was mainly interested in theoretical computer science and
+    In university he was mainly interested in theoretical computer science and
     stayed a little longer to finish with a PhD. At that time coding was not in
     focus, but always a hobby.
   </p>
   <p>
-    Since 2007 I have been more on the practical side of computer science and
-    coding has become my profession, but I still consider it my hobby as well.
+    Since 2007 Gregor has been more on the practical side of computer science and
+    coding has become his profession, but he still considers it his hobby as well.
   </p>
 </div>
 <div class="avatar" >
