--- a/index.html
+++ b/index.html
@@ -42,14 +42,13 @@ layout: default
   computers.
 </p>
 
-
-<h2>Stay tuned and Share</h2>
+<h2>Stay tuned, Share, Register</h2>
 
 <p>
   Follow <a href="https://twitter.com/breathing_code">@breathing_code</a> to get
   the latest conference news, talk about the conference using the tag
   <a href="https://twitter.com/hashtag/breathing15">#breathing15</a>, and
-  <a href="/register.html">pre-register</a> to reserve your place.
+  <a href="/register.html">register</a> to reserve your place.
 </p>
 
 <p class="twitter-timeline">
