adding some CTAs to homepage

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@ layout: default
   All <a href="/venues.html#conference">conference</a> sessions will happen on <em>May 5, 2015</em>.
 </p>
 
+<h3 style="text-align: center;">
+  <a href="/register.html">Register Now</a>!
+</h3>
+
 
 <h2>What’s the conference about?</h2>
 
@@ -41,6 +45,11 @@ layout: default
   We want to explore what live coding means as an interface between humans and
   computers.
 </p>
+
+<h3 style="text-align: center;">
+  <a href="/register.html">Register Now</a>!
+</h3>
+
 
 <h2>Stay tuned, Share, Register</h2>
 
