Added Repl Electric to programm page

--- a/program.html
+++ b/program.html
@@ -60,3 +60,49 @@ layout: grid
   <img src="/images/speakers/Gregor_Gramlich.jpg" alt="Speaker - Gregor Gramlich">
 </div>
 
+<div style="clear:both">
+
+</div>
+
+
+<a  name="repl-electric"></a>
+<h3>Repl Electric - End of buffer</h3>
+
+<article class="session-abstract">
+
+  <p>
+    Repl electric bind light, sound and poetry to their fingertips.
+  </p>
+
+  <p>
+    A single programmer live coding music with Overtone, visuals with shaders
+    and all bound together with Clojure and Emacs. Embracing an open model all
+    the performance source is open and free for all to see:
+    https://github.com/repl-electric/cassiopeia
+  </p>
+
+  </p>
+
+  <p>
+    Abstraction is used in the code to create not just a useful
+    domain specific language but plays with themes that inspired the synths
+    and visuals. My musical style is ambient with a focus on simple
+    handcrafted synths and multi voice progressions.
+  </p>
+
+  <p>
+    Official site: <a href="http://www.repl-electric.com">http://www.repl-electric.com</a>
+  </p>
+
+</article>
+
+<div class="bio">
+  <p>
+    <em>Joseph Wilk</em> performs live coding as Repl Electric, exploring programming
+    as a musical and visual performance. Also working as one of the
+    Sonic Pi Core Team helping bring live music coding to everyone.
+  </p>
+</div>
+<div class="avatar" >
+  <img src="/images/speakers/Joseph_Wilk.jpg" alt="Speaker - Joseph Wilk">
+</div>
