adding ctf session to program as well as TOC to programm page

--- a/program.html
+++ b/program.html
@@ -4,6 +4,12 @@ layout: grid
 
 <h2>Program</h2>
 
+<ul>
+  <li><a href="#pong">Live-Coded Pong</a></li>
+  <li><a href="#repl-electric">Repl Electric - End of Buffer</a></li>
+  <li><a href="#live-ctf">Live Capture The Flag</a></li>
+</ul>
+
 <p>
   <em>
     The conference program will be released step-by-step until the beginning of
@@ -11,14 +17,8 @@ layout: grid
   </em>
 </p>
 
-<!--
-<ul>
-  <li>Session: <a href="#pong">Pong</a></li>
-</ul>
--->
-
 <a name="pong"></a>
-<h3>Pong</h3>
+<h3>Live-coded Pong</h3>
 
 <article class="session-abstract">
 
@@ -60,13 +60,11 @@ layout: grid
   <img src="/images/speakers/Gregor_Gramlich.jpg" alt="Speaker - Gregor Gramlich">
 </div>
 
-<div style="clear:both">
-
-</div>
+<div style="clear:both"></div>
 
 
 <a  name="repl-electric"></a>
-<h3>Repl Electric - End of buffer</h3>
+<h3>Repl Electric - End of Buffer</h3>
 
 <article class="session-abstract">
 
@@ -79,8 +77,6 @@ layout: grid
     and all bound together with Clojure and Emacs. Embracing an open model all
     the performance source is open and free for all to see:
     https://github.com/repl-electric/cassiopeia
-  </p>
-
   </p>
 
   <p>
@@ -98,11 +94,53 @@ layout: grid
 
 <div class="bio">
   <p>
-    <em>Joseph Wilk</em> performs live coding as Repl Electric, exploring programming
-    as a musical and visual performance. Also working as one of the
-    Sonic Pi Core Team helping bring live music coding to everyone.
+    <em>Joseph Wilk</em> (<a
+      href="https://twitter.com/josephwilk">@josephwilk</a>) performs live
+    coding as Repl Electric, exploring programming as a musical and visual
+    performance. Also working as one of the Sonic Pi Core Team helping bring
+    live music coding to everyone.
   </p>
 </div>
 <div class="avatar" >
   <img src="/images/speakers/Joseph_Wilk.jpg" alt="Speaker - Joseph Wilk">
+</div>
+
+<div style="clear:both"></div>
+
+
+<a  name="live-ctf"></a>
+<h3>Live Capture The Flag</h3>
+
+<article class="session-abstract">
+
+  <p>
+    I want to present and solve a CTF (capture the flag) challenge, a code
+    puzzle if you will. Together with you, the audience. After a short
+    introduction we'll live code together e.g. by the audience shouting
+    thoughts/ideas/solutions to me on stage in order to solve the puzzle
+    step-by-step and to finally get a virtual flag. I'll become more of a
+    moderator then a speaker in this session as I'll navigate the audience
+    through the challenge.
+  </p>
+
+  <p>
+    In the first place it will be a fun session. But it will also teach
+    you a bit about web application security.
+  </p>
+
+</article>
+
+<div class="bio">
+  <p>
+
+    <em>Niklas Grebe</em> (<a href="https://twitter.com/ThYpHoOn">@ThYpHoOn</a>)
+    is a 23 year old, from Hamburg, Germany. He is programming centralized
+    backend systems in PHP and Java for games at <a
+      href="https://twitter.com/InnoGames">@InnoGames</a>. In his spare time he
+    is creates games for fun and organises game jams.
+
+  </p>
+</div>
+<div class="avatar" >
+  <img src="/images/speakers/Niklas_Grebe.jpg" alt="Speaker - Niklas Grebe">
 </div>
