making markup on program page a little more semantic

--- a/program.html
+++ b/program.html
@@ -60,7 +60,7 @@ layout: grid
   <img src="/images/speakers/Gregor_Gramlich.jpg" alt="Speaker - Gregor Gramlich">
 </div>
 
-<div style="clear:both"></div>
+<div class="session-separator"></div>
 
 
 <a  name="repl-electric"></a>
@@ -105,7 +105,7 @@ layout: grid
   <img src="/images/speakers/Joseph_Wilk.jpg" alt="Speaker - Joseph Wilk">
 </div>
 
-<div style="clear:both"></div>
+<div class="session-separator"></div>
 
 
 <a  name="live-ctf"></a>
