--- a/program.html
+++ b/program.html
@@ -116,7 +116,7 @@ layout: grid
   <p>
     I want to present and solve a CTF (capture the flag) challenge, a code
     puzzle if you will. Together with you, the audience. After a short
-    introduction we'll live code together e.g. by the audience shouting
+    introduction we'll live code together e.g. by you shouting
     thoughts/ideas/solutions to me on stage in order to solve the puzzle
     step-by-step and to finally get a virtual flag. I'll become more of a
     moderator then a speaker in this session as I'll navigate the audience
@@ -124,7 +124,7 @@ layout: grid
   </p>
 
   <p>
-    In the first place it will be a fun session. But it will also teach
+    In the first place it will be a fun session. But I'll also try to teach
     you a bit about web application security.
   </p>
 
@@ -134,10 +134,10 @@ layout: grid
   <p>
 
     <em>Niklas Grebe</em> (<a href="https://twitter.com/ThYpHoOn">@ThYpHoOn</a>)
-    is a 23 year old, from Hamburg, Germany. He is programming centralized
+    is a 24 year old, from Hamburg, Germany. He is programming centralized
     backend systems in PHP and Java for games at <a
       href="https://twitter.com/InnoGames">@InnoGames</a>. In his spare time he
-    is creates games for fun and organises game jams.
+    is creating games for fun and organises game jams.
 
   </p>
 </div>
