adding Tudor Gîrba's session

--- a/program.html
+++ b/program.html
@@ -8,6 +8,7 @@ layout: grid
   <li><a href="#pong">Live-Coded Pong</a></li>
   <li><a href="#repl-electric">Repl Electric - End of Buffer</a></li>
   <li><a href="#live-ctf">Live Capture The Flag</a></li>
+  <li><a href="#data-analysis-moose">Live Data Analysis with Moose</a></li>
 </ul>
 
 <p>
@@ -143,4 +144,81 @@ layout: grid
 </div>
 <div class="avatar" >
   <img src="/images/speakers/Niklas_Grebe.jpg" alt="Speaker - Niklas Grebe">
+</div>
+
+<div class="session-separator"></div>
+
+
+<a  name="data-analysis-moose"></a>
+<h3>Live Data Analysis with Moose</h3>
+
+<article class="session-abstract">
+  <p>
+    Developers are data scientists. Or at least, they should be.
+  </p>
+
+  <p>
+    Consider this: 50% of the development time is typically spent on figuring
+    out the system in order to figure out what to do next. In other words,
+    software engineering is primarily a decision making business. Add to that
+    the fact that often systems contain millions of lines of code and even more
+    data, and you get an environment in which decisions have to be made quickly
+    about lots of ever moving data.
+  </p>
+
+  <p>
+    Yet, too often, developers drill into the see of data manually with only
+    rudimentary tool support. This approach does not scale and it should not
+    perpetuate.
+  </p>
+
+  <p>
+    In this talk, I'll show live examples of how software engineering decisions
+    can be made quickly and accurately by building custom analysis tools that
+    enable browsing, visualizing or measuring code and data. All shown examples
+    make use of the <a href="http://moosetechnology.org">Moose analysis
+      platform</a>.
+  </p>
+</article>
+
+<div class="bio">
+  <p>
+    <em>Tudor Gîrba</em> (<a href="https://twitter.com/girba">@girba</a> and <a
+      href="http://tudorgirba.com">http://tudorgirba.com</a>) works as team and
+    innovation lead at CompuGroup Medical Schweiz, and as an independent
+    consultant.
+  </p>
+
+  <p>
+    He leads the work on the <a href="http://moosetechnology.org">Moose platform
+      for software and data analysis</a>, he founded the <a
+      href="http://gt.moosetechnology.org">Glamorous Toolkit</a> project for
+    rethinking the IDE, and he is a board member of the <a
+      href="http://pharo.org">Pharo live programming environment</a>.
+  </p>
+
+  <p>
+    He advocates that software assessment must be recognized as a critical
+    software engineering activity. He developed the <a
+      href="http://humane-assessment.com">humane assessment method</a>, and he
+    is helping companies to rethink the way they manage complex software systems
+    and data sets.
+  </p>
+
+  <p>
+    Furthermore, Tudor developed the <a href="http://demodriven.com">demo-driven
+      innovation method</a> as a combination of design thinking, idea
+    prototyping and storytelling. He is applying it in multiple contexts varying
+    from research labs to engineering companies.
+  </p>
+
+  <p>
+    In 2014, he won the prestigious <a href="http://aito.org">Dahl-Nygaard
+      Junior Prize</a> for his work on modeling and visualization of evolution
+    and interplay of large numbers of objects.
+  </p>
+
+</div>
+<div class="avatar" >
+  <img src="/images/speakers/tudor_girba.jpg" alt="Speaker - Tudor Gîrba">
 </div>
