Adding Shawn Lawson's session

--- a/program.html
+++ b/program.html
@@ -9,6 +9,7 @@ layout: grid
   <li><a href="#repl-electric">Repl Electric - End of Buffer</a></li>
   <li><a href="#live-ctf">Live Capture The Flag</a></li>
   <li><a href="#data-analysis-moose">Live Data Analysis with Moose</a></li>
+  <li><a href="#intro-responsive-graphics">Intro to Live Coding Responsive Graphics</a></li>
 </ul>
 
 <p>
@@ -217,8 +218,63 @@ layout: grid
       Junior Prize</a> for his work on modeling and visualization of evolution
     and interplay of large numbers of objects.
   </p>
-
 </div>
 <div class="avatar" >
   <img src="/images/speakers/tudor_girba.jpg" alt="Speaker - Tudor Gîrba">
 </div>
+
+<div class="session-separator"></div>
+
+
+<a name="intro-responsive-graphics"></a>
+<h3>Intro to Live Coding Responsive Graphics</h3>
+
+<article class="session-abstract">
+  <p>
+    Get hands-on experience with live-coding your own sound responsive graphics
+    using Google Chrome. This session will be a crash-course introduction in how
+    to use <a href="http://en.wikipedia.org/wiki/Fast_Fourier_transform">FFT</a>
+    data, time, and randomness within OpenGL’s fragment shader.
+  </p>
+
+  <p>
+    I will use self-built web-based OpenGL fragment shader language performance
+    IDE, similar to <a href="https://www.shadertoy.com/">shadertoy</a> and <a
+      href="https://github.com/overtone/shadertone">shadertone</a> to teach a
+    short starter session on how to live-code visuals with sound responsiveness.
+    Participants can follow along the coding (having a recent version  of Google
+    Chrome installed is required for that).
+  </p>
+</article>
+
+<div class="bio">
+  <p>
+    <em>Shawn Lawson</em> (<a
+      href="http://www.shawnlawson.com/">http://www.shawnlawson.com/</a>)
+    is an experiential media artist exploring the computational
+    sublime with technologies like: stereoscopy, camera vision, touch screens,
+    game controllers, mobile devices, random number generators, live-coding, and
+    real-time computer graphics. His artwork has exhibited in museums,
+    galleries, festivals, and public space in England, Denmark, Spain, Russia,
+    Italy, Korea, Portugal, Brazil, Turkey, Malaysia, Iran, Canada, and across
+    the USA. Lawson’s collaborative, Crudeoils, critiques structures of power:
+    surveillance, economic exploitation, and authoritarian corruption. The
+    collaborative is represented by Dean Jensen Gallery. He has been awarded
+    grants from the Electronic Media and Film Program at the New York State
+    Council on the Arts and the Experimental Television Center’s Finishing Funds
+    Program.
+  </p>
+
+  <p>
+    Lawson studied fine arts at Carnegie Mellon University and École Nationale
+    Supèrieure des Beaux-Arts. He received his MFA in Art and Technology Studies
+    from the School of the Art Institute of Chicago in 2003. He is an Associate
+    Professor of Computer Visualization in the Department of Art at Rensselaer
+    Polytechnic Institute.
+  </p>
+</div>
+<div class="avatar" >
+  <img src="/images/speakers/shawn_lawson.jpg" alt="Speaker - Shawn Lawson">
+</div>
+
+<div class="session-separator"></div>
