Added performers to program overview in grid layout

--- a/program.html
+++ b/program.html
@@ -4,13 +4,30 @@ layout: grid
 
 <h2>Program</h2>
 
-<ul>
-  <li><a href="#pong">Live-Coded Pong</a></li>
-  <li><a href="#repl-electric">Repl Electric - End of Buffer</a></li>
-  <li><a href="#live-ctf">Live Capture The Flag</a></li>
-  <li><a href="#data-analysis-moose">Live Data Analysis with Moose</a></li>
-  <li><a href="#intro-responsive-graphics">Intro to Live Coding Responsive Graphics</a></li>
+<ul class="program-overview">
+  <li>
+    <a class="session" href="#pong">Live-Coded Pong</a>
+    <a class="performer" href="#gregor-gramlich">Gregor Gramlich</a>
+  </li>
+  <li>
+    <a class="session" href="#repl-electric">Repl Electric - End of Buffer</a>
+    <a class="performer" href="#joseph-wilk">Joseph Wilk</a>
+  </li>
+  <li>
+    <a class="session" href="#live-ctf">Live Capture The Flag</a>
+    <a class="performer" href="#niklas-grebe">Niklas Grebe</a>
+  </li>
+  <li>
+    <a class="session" href="#data-analysis-moose">Live Data Analysis with Moose</a>
+    <a class="performer" href="#tudor-girba">Tudor Girba</a>
+  </li>
+  <li>
+    <a class="session" href="#intro-responsive-graphics">Intro to Live Coding Responsive Graphics</a>
+    <a class="performer" href="#shawn-lawson">Shawn Lawson</a>
+  </li>
 </ul>
+
+<div class="session-separator"></div>
 
 <p>
   <em>
@@ -43,6 +60,7 @@ layout: grid
 
 </article>
 
+<a name="gregor-gramlich"></a>
 <div class="bio">
   <p>
     <em>Gregor Gramlich</em> started coding on a Kosmos CP1 when he was nine,
@@ -94,6 +112,7 @@ layout: grid
 
 </article>
 
+<a  name="joseph-wilk"></a>
 <div class="bio">
   <p>
     <em>Joseph Wilk</em> (<a
@@ -132,6 +151,7 @@ layout: grid
 
 </article>
 
+<a  name="niklas-grebe"></a>
 <div class="bio">
   <p>
 
@@ -182,6 +202,7 @@ layout: grid
   </p>
 </article>
 
+<a  name="tudor-girba"></a>
 <div class="bio">
   <p>
     <em>Tudor Gîrba</em> (<a href="https://twitter.com/girba">@girba</a> and <a
@@ -247,6 +268,7 @@ layout: grid
   </p>
 </article>
 
+<a  name="shawn-lawson"></a>
 <div class="bio">
   <p>
     <em>Shawn Lawson</em> (<a
