Added Dierk's Frege session

--- a/program.html
+++ b/program.html
@@ -2,7 +2,7 @@
 layout: grid
 ---
 
-<h2>Program</h2>
+<h2>Conference Program</h2>
 
 <ul class="program-overview">
   <li>
@@ -20,6 +20,10 @@ layout: grid
   <li>
     <a class="session" href="#data-analysis-moose">Live Data Analysis with Moose</a>
     <a class="performer" href="#tudor-girba">Tudor Girba</a>
+  </li>
+  <li>
+    <a class="session" href="#functional-frege">Purely Functional Coding with Frege</a>
+    <a class="performer" href="#dierk-koenig">Dierk König</a>
   </li>
   <li>
     <a class="session" href="#intro-responsive-graphics">Intro to Live Coding Responsive Graphics</a>
@@ -246,6 +250,47 @@ layout: grid
 
 <div class="session-separator"></div>
 
+<a  name="functional-frege"></a>
+<h3>Purely Functional Coding with Frege</h3>
+
+<article class="session-abstract">
+  <p>
+    Frege is a Haskell for the JVM and as such it is different -
+    fundamentally different. Superficially, it is different in the appearance
+    of the code. More profoundly, it is different in the way we approach the
+    implementation of features, the design, the testing, the whole development
+    experience, and finally even how we generally approach computing.
+  </p>
+  <p>
+    In this session Dierk will solve a development task with Frege live on stage.
+    You will see how you can program without shared mutable state,
+    without mutable state, and without any state at all!
+    How to program with values instead of references. How to program without
+    statements and assignments, and why you want to do so.
+  </p>
+
+</article>
+
+<a  name="dierk-koenig"></a>
+<div class="bio">
+  <p>
+    <em>Dierk König</em> (<a href="https://twitter.com/mittie">@mittie</a>)
+    is a JavaOne Rock Star and works as a fellow for
+    <a href="http://www.canoo.com/">Canoo Engineering AG</a>, Basel, Switzerland.
+  </p>
+  <p>
+    He is a committer to many open-source projects including OpenDolphin,
+    Frege, Groovy, Grails, GPars and GroovyFX, and a manager of the open-source
+    Canoo WebTest project.
+    He is lead author of the "Groovy in Action" book, which is among the
+    publisher's best-selling titles of the decade.
+  </p>
+</div>
+<div class="avatar" >
+  <img src="/images/speakers/Dierk_Koenig.jpg" alt="Speaker - Dierk König">
+</div>
+
+<div class="session-separator"></div>
 
 <a name="intro-responsive-graphics"></a>
 <h3>Intro to Live Coding Responsive Graphics</h3>
