Added Jens Schauder's Session to program overview. No abstract, bio, photo yet

--- a/program.html
+++ b/program.html
@@ -22,6 +22,10 @@ layout: grid
     <a class="performer" href="#dierk-koenig">Dierk König</a>
   </li>
   <li>
+    <a class="session" href="#legacy-code">Legacy Code Refactor</a>
+    <a class="performer" href="#jens-schauder">Jens Schauder</a>
+  </li>
+  <li>
     <a class="session" href="#data-analysis-moose">Live Data Analysis with Moose</a>
     <a class="performer" href="#tudor-girba">Tudor Girba</a>
   </li>
@@ -342,6 +346,28 @@ layout: grid
 </div>
 <div class="avatar" >
   <img src="/images/speakers/shawn_lawson.jpg" alt="Speaker - Shawn Lawson">
+</div>
+
+<div class="session-separator"></div>
+
+<a name="legacy-code"></a>
+<h3>Legacy Code Refactor</h3>
+
+<article class="session-abstract">
+  <p>
+    Abstract not yet available...
+  </p>
+
+</article>
+
+<a  name="jens-schauder"></a>
+<div class="bio">
+  <p>
+    <em>Jens Schauder</em>`s Bio not yet available...
+  </p>
+</div>
+<div class="avatar" >
+  <img src="/images/speakers/Jens_Schauder.jpg" alt="Speaker - Jens Schauder">
 </div>
 
 <div class="session-separator"></div>
