Added short bio for Jens. Added overview ling and short bio for Sam.

--- a/program.html
+++ b/program.html
@@ -33,6 +33,10 @@ layout: grid
     <a class="session" href="#intro-responsive-graphics">Intro to Live Coding Responsive Graphics</a>
     <a class="performer" href="#shawn-lawson">Shawn Lawson</a>
   </li>
+  <li>
+    <a class="session" href="#sonic-pi">Sonic Pi or Other Fascinating Stuff</a>
+    <a class="performer" href="#sam-aaron">Sam Aaron</a>
+  </li>
 </ul>
 
 <div class="session-separator"></div>
@@ -363,11 +367,43 @@ layout: grid
 <a  name="jens-schauder"></a>
 <div class="bio">
   <p>
-    <em>Jens Schauder</em>`s Bio not yet available...
+    <em>Jens Schauder</em> (<a href="https://twitter.com/jensschauder">@jensschauder</a>
+    and <a href="http://schauderhaft.de/">schauderhaft.de</a>) is software
+    developer out of passion. With articles, his blog, conference talks and
+    his engagement in programming communities he tries to imporve the world
+    of software development just a tiny little bit.
   </p>
 </div>
 <div class="avatar" >
   <img src="/images/speakers/Jens_Schauder.jpg" alt="Speaker - Jens Schauder">
+</div>
+
+<div class="session-separator"></div>
+
+<a name="sonic-pi"></a>
+<h3>Sonic Pi or Other Fascinating Stuff</h3>
+
+<article class="session-abstract">
+  <p>
+    Abstract not yet available...
+  </p>
+
+</article>
+
+<a  name="sam-aaron"></a>
+<div class="bio">
+  <p>
+    <em>Sam Aaron</em> (<a href="https://twitter.com/samaaron">@samaaron</a> and
+    <a href="http://sam.aaron.name/">sam.aaron.name</a>) is a researcher,
+    software architect and computational thinker with a deep fascination
+    surrounding the notion of communicative programming.
+    He sees programming as one of the many communication channels for
+    descriptions of formalised process of any kind, be it a business process,
+    a compiler strategy or even a musical composition.
+  </p>
+</div>
+<div class="avatar" >
+  <img src="/images/speakers/Sam_Aaron.png" alt="Speaker - Sam Aaron">
 </div>
 
 <div class="session-separator"></div>
