Added short abstract for Jens' session

--- a/program.html
+++ b/program.html
@@ -359,7 +359,13 @@ layout: grid
 
 <article class="session-abstract">
   <p>
-    Abstract not yet available...
+    Legacy code is everywhere. Even in your project - or at least in the project
+    of one of your colleagues. One should clean up, shouldn't one, but how?
+  </p>
+
+  <p>
+    Starting with just a few lines of legacy code, I will demonstrate live how to clean
+    them up and at the same time minimizing the risk of adding new bugs.
   </p>
 
 </article>
