Stole Sam's Bio from NODE

--- a/program.html
+++ b/program.html
@@ -400,12 +400,28 @@ layout: grid
 <div class="bio">
   <p>
     <em>Sam Aaron</em> (<a href="https://twitter.com/samaaron">@samaaron</a> and
-    <a href="http://sam.aaron.name/">sam.aaron.name</a>) is a researcher,
-    software architect and computational thinker with a deep fascination
-    surrounding the notion of communicative programming.
-    He sees programming as one of the many communication channels for
-    descriptions of formalised process of any kind, be it a business process,
-    a compiler strategy or even a musical composition.
+    <a href="http://sam.aaron.name/">sam.aaron.name</a>)
+    is a live coder who considers programming as performance and strongly believes
+    in the importance of emphasising, exploring and celebrating creativity within all aspects of programming.
+  </p>
+
+  <p>
+    Sam believes that a programming environment which has sufficient liveness,
+    rapid feedback and tolerance of failure to support the live performance of
+    music is an environment ripe for mining novel ideas that will not only
+    benefit artistic practices themselves but also the computer industry more generally.
+  </p>
+
+  <p>
+    In pursuit of this unique perspective Sam is the lead developer of Overtone
+    and Quil, powerful live coding platforms for music and visuals.
+    Sam is also the creator of Sonic Pi, a music live coding environment used
+    to teach programming within schools.
+  </p>
+
+  <p>
+    By day Sam is a Postdoc Researcher at the University of Cambridge Computer
+    Laboratory and by night he codes music for people to dance to.
   </p>
 </div>
 <div class="avatar" >
