Added performers section fro pre-event party

--- a/program.html
+++ b/program.html
@@ -2,6 +2,22 @@
 layout: grid
 ---
 
+<h2>Pre-event Party Performers</h2>
+
+At the pre-event party, we will have live performances on stage by
+
+<ul class="program-overview">
+  <li>
+    <a class="session" href="#joseph-wilk">Joseph Wilk</a>
+  </li>
+  <li>
+    <a class="session" href="#sam-aaron">Sam Aaron</a>
+  </li>
+  <li>
+    <a class="session" href="#niklas-reppel">Niklas Reppel</a>
+  </li>
+</ul>
+
 <h2>Conference Program</h2>
 
 <ul class="program-overview">
@@ -427,5 +443,32 @@ layout: grid
 <div class="avatar" >
   <img src="/images/speakers/Sam_Aaron.png" alt="Speaker - Sam Aaron">
 </div>
+
+<div class="session-separator"></div>
+
+<a name="cult-of-graa"></a>
+<h3>Cult of graa&gt;</h3>
+
+<article class="session-abstract">
+  <p>
+    From-scratch live coding perfomance with a self-developed, python-based
+    embedded domain specific language called "graa&gt;", tailored for
+    Disklavier (although a sampler program might be used as well ...).
+  </p>
+</article>
+
+<a  name="niklas-reppel"></a>
+<div class="bio">
+  <p>
+    <em>Niklas Reppel</em>
+    was born in Witten, Germany, in 1983.
+    He got a B.Sc in Computer Science from Dortmund University.
+    At the moment he studies Music Informatics in Karlsruhe.
+  </p>
+</div>
+<div class="avatar" >
+  <img src="/images/speakers/Niklas_Reppel.png" alt="Speaker - Niklas Reppel">
+</div>
+
 
 <div class="session-separator"></div>
