Added some cross linking between venues and program

--- a/program.html
+++ b/program.html
@@ -2,9 +2,10 @@
 layout: grid
 ---
 
+<a name="party-program"></a>
 <h2>Pre-event Party Performers</h2>
 
-At the pre-event party, we will have live performances on stage by
+At the <a href="/venues.html#preevent">pre-event party</a>, we will have live performances on stage by
 
 <ul class="program-overview">
   <li>
@@ -18,6 +19,7 @@ At the pre-event party, we will have live performances on stage by
   </li>
 </ul>
 
+<a name="conference-program"></a>
 <h2>Conference Program</h2>
 
 <ul class="program-overview">
