Changed Cult of Graa description according to Niklas' email

--- a/program.html
+++ b/program.html
@@ -15,7 +15,8 @@ At the <a href="/venues.html#preevent">pre-event party</a>, we will have live pe
     <a class="session" href="#sam-aaron">Sam Aaron</a>
   </li>
   <li>
-    <a class="session" href="#niklas-reppel">Niklas Reppel</a>
+    <a class="session" href="#niklas-reppel">Niklas Reppel</a> with
+    <a href="#cult-of-graa">Cult of Graa</a>
   </li>
 </ul>
 
@@ -453,19 +454,42 @@ At the <a href="/venues.html#preevent">pre-event party</a>, we will have live pe
 
 <article class="session-abstract">
   <p>
-    From-scratch live coding perfomance with a self-developed, python-based
-    embedded domain specific language called "graa&gt;", tailored for
-    Disklavier (although a sampler program might be used as well ...).
+    A live coding performance using a self-developed, Python-based embedded
+    domain-specific language called "graa>". Focusing on the exploration of
+    stochastic and otherwise non-deterministic music, the graa> language
+    incorporates stochastic processes in its very foundations.
+    Thus, a graa> performance is usually surprising for the audience as well
+    as the performer.
+  </p>
+
+  <p>
+    Ideally, it starts out on one single note
+    and ends in multi-layered, polyfocal structures that you could drown in
+    for hours, without drifting into randomness. The juxtaposition of very basic
+    synthetic sounds and piano samples (or, if available, actual piano sounds
+    coming from a Disklavier) usually defines the sound of a graa> performance,
+    however there's nothing that opposes the creation of
+    algorithmic music you can dance to.
   </p>
 </article>
 
 <a  name="niklas-reppel"></a>
 <div class="bio">
   <p>
-    <em>Niklas Reppel</em>
-    was born in Witten, Germany, in 1983.
-    He got a B.Sc in Computer Science from Dortmund University.
-    At the moment he studies Music Informatics in Karlsruhe.
+    <em>Niklas Reppel</em> (<a href="http://www.parkellipsen.de/">www.parkellipsen.de</a>)
+    was born in Witten, Germany, in 1983. He is a programmer and musician and
+    holds a B.Sc. in computer science from TU Dortmund. Herecently left the
+    world of commerical software development to pursue a master's degree in
+    music informatics at the IMWI at HfM Karlsruhe.
+  </p>
+
+  <p>
+    Formerly rooted in the local improv- and jam-session scene as an
+    instrumentalist, an interest for improvisative live-coding developed
+    quite naturally. A strong affinity to text-based man-machine interaction
+    did the rest. Bored by deterministic music, and inspired by the
+    industrial/natural soundscapes of his home area, non-determinism
+    gained increasing significance in his work.
   </p>
 </div>
 <div class="avatar" >
