Added Sam's session title

--- a/program.html
+++ b/program.html
@@ -406,11 +406,11 @@ At the <a href="/venues.html#preevent">pre-event party</a>, we will have live pe
 <div class="session-separator"></div>
 
 <a name="sonic-pi"></a>
-<h3>Sonic Pi or Other Fascinating Stuff</h3>
+<h3>Learn to Live Code Music with Sonic Pi</h3>
 
 <article class="session-abstract">
   <p>
-    Abstract not yet available...
+    The title says it all...
   </p>
 
 </article>
