--- a/index.html
+++ b/index.html
@@ -9,14 +9,6 @@ layout: default
   computer programming.
 </p>
 
-<h3>Time & Place</h3>
-
-<p>
-  The conference will take place in <em>Frankfurt, Germany</em>.
-  It will start with an <a href="/venues.html#preparty">pre-event party</a> on <em>May 4, 2015</em>.
-  All <a href="/venues.html#conference">conference</a> sessions will happen on <em>May 5, 2015</em>.
-</p>
-
 <h2>What’s the conference about?</h2>
 
 <p>
@@ -46,8 +38,7 @@ layout: default
 <p>
   Follow <a href="https://twitter.com/breathing_code">@breathing_code</a> to get
   the latest conference news, talk about the conference using the tag
-  <a href="https://twitter.com/hashtag/breathing15">#breathing15</a>, or
-  <a href="/register.html">register as participant</a>.
+  <a href="https://twitter.com/hashtag/breathing15">#breathing15</a>.
 </p>
 
 <p class="twitter-timeline">
